--- a/Source/Comparable.Fody/Comparable.Fody.csproj
+++ b/Source/Comparable.Fody/Comparable.Fody.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
+    <DisableFody>true</DisableFody>
   </PropertyGroup>
 
   <ItemGroup>
