--- a/Source/Comparable.Fody/Comparable.Fody.csproj
+++ b/Source/Comparable.Fody/Comparable.Fody.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
     <DisableFody>true</DisableFody>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
