Implemented the validation that any CompareBy are defined.

--- a/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
+++ b/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
     <ProjectReference Include="..\Comparable.Fody\Comparable.Fody.csproj" />
     <ProjectReference Include="..\Comparable\Comparable.csproj" />
+    <ProjectReference Include="..\CompareByIsNotDefined\CompareByIsNotDefined.csproj" />
   </ItemGroup>
 
 </Project>
