--- a/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
+++ b/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\Comparable.Fody\Comparable.Fody.csproj" />
     <ProjectReference Include="..\Comparable\Comparable.csproj" />
     <ProjectReference Include="..\CompareByIsNotDefined\CompareByIsNotDefined.csproj" />
+    <ProjectReference Include="..\PropertyIsNotIComparable\PropertyIsNotIComparable.csproj" />
   </ItemGroup>
 
 </Project>
