Refactor test structure.

--- a/Source/Comparable/Comparable.csproj
+++ b/Source/Comparable/Comparable.csproj
@@ -6,6 +6,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
     <DisableFody>true</DisableFody>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="none" />
