--- a/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
+++ b/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DisableFody>true</DisableFody>
     <IsPackable>false</IsPackable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
