--- a/Source/ILSample/ILSample.csproj
+++ b/Source/ILSample/ILSample.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DisableFody>true</DisableFody>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
