Refactoring Tests with CompareTo by object.

--- a/Source/ILSample/ILSample.csproj
+++ b/Source/ILSample/ILSample.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DisableFody>true</DisableFody>
     <LangVersion>latest</LangVersion>
+    <RootNamespace>AssemblyToProcess</RootNamespace>
   </PropertyGroup>
 
 </Project>
