--- a/Source/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/Source/AssemblyToProcess/AssemblyToProcess.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AssemblyNotToProcess\AssemblyNotToProcess.csproj" />
     <ProjectReference Include="..\Comparable\Comparable.csproj" />
   </ItemGroup>
 
