--- a/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
+++ b/Source/Comparable.Fody.Test/Comparable.Fody.Test.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\CompareByIsNotDefined\CompareByIsNotDefined.csproj" />
     <ProjectReference Include="..\CompareIsNotDefined\CompareIsNotDefined.csproj" />
     <ProjectReference Include="..\CompareToAlreadyExists\CompareToAlreadyExists.csproj" />
+    <ProjectReference Include="..\CompareToByGenericAlreadyExists\CompareToByGenericAlreadyExists.csproj" />
     <ProjectReference Include="..\FieldIsNotIComparable\FieldIsNotIComparable.csproj" />
     <ProjectReference Include="..\MultipleCompareByWithEqualPriority\MultipleCompareByWithEqualPriority.csproj" />
     <ProjectReference Include="..\PropertyIsNotIComparable\PropertyIsNotIComparable.csproj" />
